# gcn_ppi

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mlruns  preprocess_pdb.py  pyproject.toml  run.py  run.sh  setup.cfg  test.py  test_cv.py  test_cv_results.sh
configs/: hprd50_config.yaml  preprocess.yaml  test_cv.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: bioinfer.yaml  bioinfer_text_graph.yaml  graph_dataset.yaml  graph_num_dataset.yaml  hprd50.yaml  hprd50_datamodule.yaml  hprd50_datamodule_author.yaml  hprd50_num.yaml  hprd50_text_graph.yaml  hprd50_text_graph_num.yaml  num_dataset.yaml  text_dataset.yaml  text_graph_dataset.yaml  text_graph_num_dataset.yaml  text_num_dataset.yaml
configs/model/: biobert_classifier.yaml  graph_and_num_model.yaml  graph_bert_model.yaml  graph_model.yaml  mm_with_bert.yaml  multi_modal_model.yaml  num_model.yaml  text_and_graph_and_num_model.yaml  text_and_graph_model.yaml  text_and_num_model.yaml  text_model.yaml
configs/trainer/: default.yaml
notebooks/: summarize_results.ipynb
preprocess/: complement_pdb_emsemble_id.py  complement_pdb_id.py  convert_to_pdb_ensemble_id.py  fetch_fasta_by_id.py  fetch_pdb_by_id.py  fetch_pdb_ensemble_id.py  list_gene_names.py  normalize_numerical.py  split_csv.py
results/: cv_bioinfer_results.csv  cv_hprd_results.csv  main_part_cv_bioinfer_run.csv  main_part_cv_hprd_run.csv  main_part_single_bioinfer_run.csv  main_part_single_hprd_run.csv  single_bioinfer_results.csv  single_hprd_results.csv
src/: test.py  train.py
src/datamodules/: graph_and_num_datamodule.py  (+9 more)
(+49 files in other folders)
