[tool.poetry]
name = "lightning-hydra-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.10.0"
pytorch-lightning = "^1.4.8"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
hydra-optuna-sweeper = "^1.1.1"
wandb = "^0.12.2"
python-dotenv = "^0.19.0"
rich = "^10.11.0"
pytest = "^6.2.5"
sh = "^1.14.2"
scikit-learn = "^1.0"
pandas = "^1.3.3"
seaborn = "^0.11.2"
jupyterlab = "^3.1.14"
pudb = "^2021.1"
networkx = "^2.6.3"
transformers = "^4.12.4"
biopython = "^1.79"
torch-geometric = "^2.0.2"
mygene = "^3.2.2"
aiohttp = "3.7.4"
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
